--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </section>
     <section class="u-clearfix u-container-align-center u-white u-section-3" id="carousel_25db">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-default u-text-1">Наши игры</h2>
+        <h2 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-default u-text-1">Our games</h2>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-1">
