Update contact block

--- a/Главная.html
+++ b/Главная.html
@@ -103,8 +103,8 @@
       
     </section>
     <section class="u-align-center u-clearfix u-section-2" id="sec-d690">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-container-style u-group u-group-1" data-href="Главная.html#sec-fcc3">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+        <div class="u-container-style u-expanded-width-xs u-group u-group-1" data-href="Главная.html#sec-fcc3">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-1"> Do you have an idea for a game?</h2>
             <h2 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-default u-text-2">Contact us</h2>
@@ -117,7 +117,7 @@
     </section>
     <section class="u-clearfix u-container-align-center u-white u-section-3" id="carousel_25db">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-default u-text-1">Наши игры</h2>
+        <h2 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-default u-text-1">Our games</h2>
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-1">
