--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
       
     </section>
     <section class="u-align-center u-clearfix u-section-2" id="sec-d690">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <div class="u-container-style u-group u-group-1" data-href="Главная.html#sec-fcc3">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+        <div class="u-container-style u-expanded-width-xs u-group u-group-1" data-href="Главная.html#sec-fcc3">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-1"> Do you have an idea for a game?</h2>
             <h2 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-default u-text-2">Contact us</h2>
