--- a/Главная.html
+++ b/Главная.html
@@ -122,12 +122,11 @@
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-1">
-              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
+              <div class="u-container-layout u-valign-top u-container-layout-1">
                 <img class="u-align-center u-image u-image-round u-preserve-proportions u-radius-25 u-image-1" src="images/unnamed.jpg" alt="" data-image-width="256" data-image-height="256">
                 <h6 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-2">Pinball idle</h6>
                 <p class="u-align-center u-text u-text-3"> Zen and meditative pinball arcade tycoon. Relax and enjoy watching idle ball</p>
                 <a href="https://play.google.com/store/apps/details?id=com.MiddleFrame.PinballIdle" class="u-align-center u-border-2 u-border-black u-btn u-btn-round u-button-style u-custom-font u-font-ubuntu u-hover-black u-none u-radius-20 u-text-hover-white u-btn-1" target="_blank">GOOGLE PLAY</a>
-                <a href="https://yandex.ru/games/app/193734#app-id=193734&amp;catalog-session-uid=catalog-a781fa60-8aa5-5391-a53c-ab44671041f2-1677914747237-e713&amp;rtx-reqid=1173925247648615554&amp;pos=%7B%22listType%22%3A%22played%22%2C%22tabCategory%22%3A%22common%22%7D" class="u-border-2 u-border-black u-btn u-btn-round u-button-style u-custom-item u-hover-black u-none u-radius-20 u-text-hover-white u-btn-2" target="_blank">play in Browser</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-custom-item u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-2">
@@ -135,8 +134,8 @@
                 <img class="u-align-center u-image u-image-round u-preserve-proportions u-radius-25 u-image-2" src="images/unnamed.png" alt="" data-image-width="256" data-image-height="256">
                 <h6 class="u-align-center u-custom-font u-font-ubuntu u-text u-text-4">Tic tac toe plus</h6>
                 <p class="u-align-center u-text u-text-5"> Online classic tic-tac-toe card game with the interesting mechanics!</p>
-                <a href="https://play.google.com/store/apps/details?id=com.MiddleFrame.Tictactoe" class="u-align-center u-border-2 u-border-black u-btn u-btn-round u-button-style u-custom-font u-font-ubuntu u-hover-black u-none u-radius-20 u-text-hover-white u-btn-3" target="_blank">GOOGLE PLAY</a>
-                <a href="https://middleframe.github.io/TicTacToeWebGL/" class="u-border-2 u-border-black u-btn u-btn-round u-button-style u-custom-item u-hover-black u-none u-radius-20 u-text-hover-white u-btn-4" target="_blank">play in browser</a>
+                <a href="https://play.google.com/store/apps/details?id=com.MiddleFrame.Tictactoe" class="u-align-center u-border-2 u-border-black u-btn u-btn-round u-button-style u-custom-font u-font-ubuntu u-hover-black u-none u-radius-20 u-text-hover-white u-btn-2" target="_blank">GOOGLE PLAY</a>
+                <a href="https://middleframe.github.io/TicTacToeWebGL/" class="u-border-2 u-border-black u-btn u-btn-round u-button-style u-custom-item u-hover-black u-none u-radius-20 u-text-hover-white u-btn-3" target="_blank">play in browser</a>
               </div>
             </div>
           </div>
